@@ -227,6 +227,9 @@ class LogStash::Pipeline
         thread.wakeup # in case it's in blocked IO or sleeping
       rescue ThreadError
       end
+      @inputs.each do |input|
+        input.teardown
+      end
     end
 
     # No need to send the ShutdownSignal to the filters/outputs nor to wait for
